added new bus called Xiamen Golden Dragon

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li><a href="www.higer.com">Higer</a></li>
         <li>Kinglong</li>
         <li>Zhogtong</li>
+        <li>Golden Dragon</li>
     </ul>
     <hr size="3">
     <h3>Team</h3>
